Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -210,6 +210,8 @@ ul.guide-summary .detail {
 }
 .listjs-search input {
   width:100%;
+  padding:10px;
+  border-radius:10px;
 }
 .listjs-search .fa-search {
   position:absolute;
