--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -210,13 +210,15 @@ ul.guide-summary .detail {
 }
 .listjs-search input {
   width:100%;
-  padding:10px;
-  border-radius:10px;
+  padding:5px;
+  border-radius:5px;
+  border:solid 1px #ddd;
 }
 .listjs-search .fa-search {
   position:absolute;
-  right:7px;
-  top:7px;
+  right:10px;
+  top:9px;
+  color:#ddd;
 }
 
 
