Updated 'assets/css/theme/breakpoints.css' via CloudCannon

--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -39,7 +39,9 @@
     border:none;
     border-bottom:solid 3px transparent;
     transition-duration: 0.5s;
-    
+  }
+  .menu li li a {
+    min-width:150px;  
   }
   .menu li:hover a,
   .menu li:focus-within a {
