Updated 'assets/css/theme/breakpoints.css' via CloudCannon

--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -43,6 +43,9 @@
   .menu li li a {
     min-width:150px;  
   }
+  .menu li li a.active {
+    border:0 0 0 3px;
+  }  
   .menu li:hover a,
   .menu li:focus-within a {
     background:#ccc;
