--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -44,7 +44,8 @@
     min-width:150px;  
   }
   .menu li li a.active {
-    border:0 0 0 3px;
+    border:0;
+    border-left:solid 3px #d35400;
   }  
   .menu li:hover a,
   .menu li:focus-within a {
