--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -46,6 +46,8 @@
   .menu li li a.active {
     border:0;
     border-left:solid 3px #d35400;
+    border-right:solid 3px #d35400;
+    
   }  
   .menu li:hover a,
   .menu li:focus-within a {
