--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -8,10 +8,10 @@
 
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/reset.css" />
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/reveal.css" />
-		{% if page.slide_theme %}
+		{% if page.slide_theme and page.slide_theme != 'makerlab' %}
 		  <link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/theme/{{ page.slide_theme }}.css" id="theme" />
     {% else %}
-      <link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/dist/theme/white.css" id="theme" />
+      <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/components/slidedeck.css" id="theme" />
     {% endif %}
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/plugin/highlight/monokai.css" id="highlight-theme" />
