--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -1,11 +1,39 @@
-.slidedeck-branding {
-  position:absolute;
-  bottom:0;
-  left:0;
-  width:75px;
-  padding:2rem;
-  display:none;
+/**
+ * Tables
+ */
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width:100%;
+  margin-bottom:10px;
 }
-.slidedeck-branding img {
-  width:50px;
+table caption {
+  font-size:2.0rem;
+  margin:20px auto;
+}
+tbody {
+  border-top: 1px solid #444444;
+}
+tr.even,
+tr.odd {
+  background-color: transparent;
+  border:none;
+  padding: 0;
+}
+th,
+td {
+  padding: 5px 10px;
+  text-align: left;
+  border-color: #e1e1e1;
+  border-width: 0 0 1px 0;
+  border-style:solid;
+}
+table.sticky-header {
+  background:#000;
+}
+th, th a {
+  font-size:1.2rem;
+  text-transform:uppercase;
+  border-color:#666;
 }
