--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -15,7 +15,7 @@
     {% endif %}
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/plugin/highlight/monokai.css" id="highlight-theme" />
-		
+    <link href="//fonts.googleapis.com/css?family=Open+Sans|Inconsolata|Source+Sans+Pro" rel="stylesheet" type="text/css" />
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/components/slidedeck.css" />
 
 	</head>
