--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -10,12 +10,12 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
  *********************************************/
 :root {
   --background-color: #fff;
-  --main-font: Open Sans, Helvetica, sans-serif;
+  --main-font: Source Sans Pro, Helvetica, sans-serif;
   --main-font-size: 42px;
   --main-color: #222;
   --block-margin: 20px;
   --heading-margin: 0 0 20px 0;
-  --heading-font: Open Sans, Helvetica, sans-serif;
+  --heading-font: Source Sans Pro, Helvetica, sans-serif;
   --heading-color: #222;
   --heading-line-height: 1.2;
   --heading-letter-spacing: normal;
@@ -38,7 +38,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   background-color: #fff; }
 
 .reveal {
-  font-family: "Open Sans", Helvetica, sans-serif;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-size: 42px;
   font-weight: normal;
   color: #222; }
@@ -69,7 +69,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #222;
-  font-family: "Open Sans", Helvetica, sans-serif;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-weight: 600;
   line-height: 1.2;
   letter-spacing: normal;
