--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -153,7 +153,8 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   padding: 5px;
   font-style: italic;
   background: rgba(255, 255, 255, 0.05);
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); }
+  border-left:solid 10px #ddd;
+}
 
 .reveal blockquote p:first-child,
 .reveal blockquote p:last-child {
