--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -5,6 +5,10 @@
 section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
   color: #fff; }
 
+
+.slidedeck-branding {
+  display:none;
+}
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
