--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -12,6 +12,10 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   bottom:0;
   left:0;
 }
+.slidedeck-branding .img {
+  max-width:100%;
+  height:auto;
+}
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
