--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -12,7 +12,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   bottom:0;
   left:0;
 }
-.slidedeck-branding .img {
+.slidedeck-branding img {
   width:61px;
 }
 /*********************************************
