Updated '_layouts/slidedeck.html' via CloudCannon

--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -50,7 +50,7 @@
 
 		</script>
 	  <div class="slidedeck-branding">
-	    <div class="logo"><a href="{{ site.baseurl }}/"><img alt="logo" title="Logo" src="{{site.data.images.logo_image}}" /></a></div>
+	    <a href="{{ site.baseurl }}/"><img alt="logo" title="Logo" src="{{site.data.images.logo_image}}" /></a> <i class="fa fa-th"></i> ESC | <i class="fa fa-expand"></i F 
 	  </div>		
 	</body>
 </html>
