Updated '_layouts/slidedeck.html' via CloudCannon

--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -17,6 +17,7 @@
     {% endif %}
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/plugin/highlight/monokai.css" id="highlight-theme" />
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="//fonts.googleapis.com/css?family=Open+Sans|Inconsolata|Source+Sans+Pro" rel="stylesheet" type="text/css" />
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/components/slidedeck.css" />
 
