--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -17,7 +17,6 @@
     {% endif %}
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/revealjs/plugin/highlight/monokai.css" id="highlight-theme" />
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="//fonts.googleapis.com/css?family=Open+Sans|Inconsolata|Source+Sans+Pro" rel="stylesheet" type="text/css" />
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/components/slidedeck.css" />
 
@@ -51,7 +50,7 @@
 
 		</script>
 	  <div class="slidedeck-branding">
-	    <a href="{{ site.baseurl }}/"><img alt="logo" title="Logo" src="{{site.data.images.logo_image}}" /></a> <i class="fa fa-th"></i> ESC | <i class="fa fa-expand"></i F 
+	    <a href="{{ site.baseurl }}/"><img alt="logo" title="Logo" src="{{site.data.images.logo_image}}" /></a> <i title="Overview [O] [ESC]" class="fa fa-th"></i>  <i class="fa fa-expand" title="Fullscreen [F]"></i>
 	  </div>		
 	</body>
 </html>
