--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -11,9 +11,11 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   padding:10px;
   bottom:0;
   left:0;
+  line-height:60px;
+  font-size:2rem;
 }
 .slidedeck-branding img {
-  width:61px;
+  width:60px;
 }
 /*********************************************
  * GLOBAL STYLES
