--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -15,12 +15,14 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 .slidedeck-branding img {
   width:60px;
 }
+/*
 .helper-controls {
   line-height:60px;
   font-size:1.6rem;
   display:inline-block;
   vertical-align:top;
 }
+*/
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
