--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -19,10 +19,12 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 * Fix for large image content getting cut off
 * https://github.com/hakimel/reveal.js/issues/2342
 */
+/*
 .slides {
   overflow: scroll !important;
   pointer-events: auto !important;
 }
+*/
 /*
 .helper-controls {
   line-height:60px;
