--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -131,8 +131,9 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 .reveal img,
 .reveal video,
 .reveal iframe {
-  max-width: 95%;
-  max-height: 65vh;
+   /* max-height:95%; max-width: 95% */
+    height: 65vh;
+    max-width: 80vw;
   }
 
 .reveal strong,
