--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -25,6 +25,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   pointer-events: auto !important;
 }
 */
+
 /*
 .helper-controls {
   line-height:60px;
@@ -131,10 +132,8 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 .reveal img,
 .reveal video,
 .reveal iframe {
-   /* max-height:95%; max-width: 95% */
-    height: 65vh;
-    max-width: 80vw;
-  }
+  max-width: 95%;
+  max-height: 95%; }
 
 .reveal strong,
 .reveal b {
