Updated '_layouts/slidedeck.html' via CloudCannon

--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -37,7 +37,7 @@
 		<script>
       var images = document.querySelectorAll(".reveal img");
       images.forEach(function(image) {
-        image.classList.add('r-stretch');
+        image.classList.add('stretch');
       });
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
