--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -20,8 +20,6 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 * https://github.com/hakimel/reveal.js/issues/2342
 */
 
-
-
 /*
 .helper-controls {
   line-height:60px;
@@ -128,8 +126,9 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 .reveal img,
 .reveal video,
 .reveal iframe {
-  max-width: 95%;
-  max-height: 95%; }
+  max-width: 60%;
+  max-height: 60%; 
+}
 
 .reveal strong,
 .reveal b {
