--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -42,7 +42,7 @@
 				hash: true,
 				slideNumber: 'c/t',
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealZoom ]
+				plugins: [ Zoom ]
 			}).then(
   			function(){
          // Reveal.toggleOverview(true);			 
