--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -27,7 +27,7 @@
 		<div class="reveal">
 			<div class="slides">
       {% for slide in page.slides %}
-        <section data-background-color="{{ slide.background_color }}" class="content editable">{{ slide.content_markdown | markdownify }}</section>
+        <section data-background-color="{{ slide.background_color }}" data-background-image="{{ slide.background_image}}" class="content editable">{{ slide.content_markdown | markdownify }}</section>
       {% endfor %}
 			</div>
 		</div>
