--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -46,13 +46,20 @@
 				plugins: [ RevealHighlight, RevealZoom ]
 			}).then(
   			function(){
-         // Reveal.toggleOverview(true);			 
+         // Reveal.toggleOverview(true);			
+         document.querySelector('.overview').onClick(function(){
+          Reveal.toggleOverview();
+         });
+         document.querySelector('.fullscreen').onClick(function(){
+          Reveal.toggleFullscreen();
+         });
   			}
 			);
 
 		</script>
 	  <div class="slidedeck-branding">
 	    <a href="{{ site.baseurl }}/"><img alt="logo" title="Logo" src="{{site.data.images.logo_image}}" /></a> 
+	    <span class="helper-controls"><i title="Overview [O] [ESC]" class="fa fa-th overview"></i>  <i class="fa fa-expand fullscreen" title="Fullscreen [F]"></i></span>
 	  </div>		
 	</body>
 </html>
