--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -26,6 +26,9 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   display:inline-block;
   vertical-align:top;
 }
+.helper-controls i {
+  cursor:pointer;  
+}
 
 /*********************************************
  * GLOBAL STYLES
