Updated '_layouts/slidedeck.html' via CloudCannon

--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -50,7 +50,7 @@
          document.querySelector('.overview').addEventListener('click', function(){
           Reveal.toggleOverview();
          });
-         document.querySelector('.fullscreen').addEventListener('click', function(){
+         document.querySelector('.fullscreen').addEventListener('click', function(element){
            // Toggle fullscreen
           	element = element || document.documentElement;
           
