--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -86,7 +86,7 @@
 		</script>
 	  <div class="slidedeck-branding">
 	    <a href="{{ site.baseurl }}/"><img alt="logo" title="Logo" src="{{site.data.images.logo_image}}" /></a> 
-	    <span class="helper-controls"><i title="Overview [O] [ESC]" class="fa fa-th overview"></i>  <i class="fa fa-expand fullscreen" title="Fullscreen [F]"></i></span>
+	    <span class="helper-controls"><i title="Overview [O] [ESC]" class="fa fa-th fa-fw overview"></i>  <i class="fa fa-expand fa-fw fullscreen" title="Fullscreen [F]"></i></span>
 	  </div>		
 	</body>
 </html>
