--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -22,13 +22,19 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 
 .helper-controls {
   line-height:60px;
-  font-size:1.6rem;
+  font-size:2rem;
   display:inline-block;
   vertical-align:top;
   padding-left:5px;
+  
 }
 .helper-controls i {
   cursor:pointer;  
+  opacity:.5;
+  transition:all .2s;
+}
+.helper-controls i:hover {
+  opacity:1;
 }
 
 /*********************************************
