--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -316,4 +316,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   .backgrounds {
     background-color: #fff; 
   } 
+  .helper-controls {
+    display:none;
+  }
 }
