--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 	<body class="{{ page.body_class }}">
 	  
     <!-- div class="bc-widget bc-my-account-nav"></div -->
-    <form class="search-form hide" action="{{ site.baseurl }}/search/" method="get">
+    <form class="search-form hide" action="{{ site.baseurl }}/search" method="get">
       <input type="search" name="q" id="search-input" placeholder="Search..." autofocus>
       <input type="submit" value="Search" style="display: none;">
     </form>   	          
