Updated '_layouts/guide.html' via CloudCannon

--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -54,6 +54,9 @@ layout: default
 {% endif %}
 
 
-<a class="print-icon print-hidden" href="#" onclick="window.print();return false;"><i class="fa fa-print"></i></a>
+<a class="pdf-icon print-hidden" href="#" onclick="html2pdf(document.body);"><i class="fa fa-file-pdf-o fa-fw"></i></a>
+<a class="print-icon print-hidden" href="#" onclick="window.print();return false;"><i class="fa fa-print fa-fw"></i></a>
+
+
 
 
