--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -54,7 +54,7 @@ layout: default
 {% endif %}
 
 
-<a class="pdf-icon print-hidden" href="#" onclick="html2pdf(document.body);"><i class="fa fa-file-pdf-o fa-fw"></i></a>
+<a class="pdf-icon print-hidden" href="#" onclick="generatePDF(document.body);"><i class="fa fa-file-pdf-o fa-fw"></i></a>
 <a class="print-icon print-hidden" href="#" onclick="window.print();return false;"><i class="fa fa-print fa-fw"></i></a>
 
 
