--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -53,8 +53,16 @@ layout: default
 </span>
 {% endif %}
 
-
-<a class="pdf-icon print-hidden" href="#" onclick="generatePDF();"><i class="fa fa-file-pdf-o fa-fw"></i></a>
+<script>
+  /*@@TODO move all this to main.js */
+  /* html2pdf */
+  function generatePDF() {
+    $('body').addClass('media-print'); 
+    html2pdf(document.body);
+    $('body').removeClass('media-print');
+  }
+</script>
+<a class="pdf-icon print-hidden" href="#" onclick="generatePDF();return false;"><i class="fa fa-file-pdf-o fa-fw"></i></a>
 <a class="print-icon print-hidden" href="#" onclick="window.print();return false;"><i class="fa fa-print fa-fw"></i></a>
 
 
