--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -66,7 +66,7 @@ layout: default
       jsPDF:        { unit: 'in', format: 'letter', orientation: 'portrait' }
     };    
     html2pdf().set(opt).from(document.body).save().then(function(){
-      $('body').removeClass('.media-print');  
+      $('body').removeClass('media-print');  
     });
   }
 </script>
