Updated '_layouts/guide.html' via CloudCannon

--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -60,7 +60,7 @@ layout: default
     $('body').addClass('media-print'); 
     var opt = {
       margin:       1,
-      filename:     '{{- page.title -}}',
+      filename:     '{{- page.title | slugify -}}.pdf',
       image:        { type: 'jpeg', quality: 0.98 },
       html2canvas:  { scale: 2 },
       jsPDF:        { unit: 'in', format: 'letter', orientation: 'portrait' }
