Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -181,7 +181,7 @@ ul.guide-summary .detail {
   color:#FF5722;
 }
 
-
+#content a.pdf-icon,
 #content a.print-icon {
   display:block;
   float:right;
