--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -187,7 +187,8 @@ ul.guide-summary .detail {
   float:right;
   border-bottom:none;
   color: #000;
-  width:50px;
+  margin-left:50px;
+  font-size:2rem;
 }
 
 #content .tags .tag-name,
