--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -187,7 +187,7 @@ ul.guide-summary .detail {
   float:right;
   border:solid 1px transparent;
   color: #000;
-  padding:5px;
+  padding:2px 5px;
 }
 #content a.pdf-icon:hover,
 #content a.print-icon:hover {
