Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -191,7 +191,7 @@ ul.guide-summary .detail {
 }
 #content a.pdf-icon:hover,
 #content a.print-icon:hover {
-  border:solid 1px #eee;
+  border:solid 1px #ddd;
   border-radius:5px;
 }
 
