Updated '_layouts/slidedeck.html' via CloudCannon

--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -109,7 +109,7 @@
          
         var pdf = getUrlVars()["generatePDF"];
         console.log(pdf);
-        if (pdf) {
+        if (pdf.size > 0) {
           generatePDF();  
         }
     	         
