--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -36,7 +36,7 @@
 		<script src="{{ site.baseurl }}/assets/js/revealjs/dist/reveal.js"></script>
 		<script src="{{ site.baseurl }}/assets/js/revealjs/plugin/highlight/highlight.js"></script>
 		<script src="{{ site.baseurl }}/assets/js/revealjs/plugin/zoom/zoom.js"></script>
-		
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js" integrity="sha512-pdCVFUWsxl1A4g0uV6fyJ3nrnTGeWnZN2Tl/56j45UvZ1OMdm9CIbctuIHj+yBIRTUUyv6I9+OivXj4i0LPEYA==" crossorigin="anonymous"></script>		
 		<script>
       function getUrlVars() {
         var vars = {};
