--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -110,7 +110,7 @@
                 jsPDF:        { unit: 'mm', format: 'letter', orientation: 'landscape' }
               };    
               setTimeout(function(){
-                html2pdf().set(opt).from(document.body).save();
+                html2pdf().set(opt).from(document).save();
               }, 1000);
             }         
         
