Updated '_layouts/slidedeck.html' via CloudCannon

--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -102,6 +102,7 @@
             // Handler for .ready() called.
             var pdf = getUrlVars()["generatePDF"];
             if (pdf != null) {
+              $('body').css('height', 'auto');
               var opt = {
                 margin:       0,
                 filename:     '{{- page.title | slugify -}}.pdf',
