--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -101,7 +101,7 @@
         
             // Handler for .ready() called.
             var pdf = getUrlVars()["generatePDF"];
-            if (pdf != null) {
+            if (pdf) {
               $('body').css('height', 'auto');
               var opt = {
                 margin:       0,
