Updated '_layouts/slidedeck.html' via CloudCannon

--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -98,7 +98,7 @@
 
             // Handler for .ready() called.
             var pdf = getUrlVars()["generatePDF"];
-            if (pdf) {
+            if (pdf != null) {
               $('body').css('height', 'auto');
               var opt = {
                 margin:       0,
