--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -100,6 +100,7 @@
             var pdf = getUrlVars()["generatePDF"];
             if (pdf != null) {
               $('body').css('height', 'auto');
+              $('body').css('width', '100%');
               var opt = {
                 margin:       0,
                 filename:     '{{- page.title | slugify -}}.pdf',
