--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -99,8 +99,7 @@
             // Handler for .ready() called.
             var pdf = getUrlVars()["generatePDF"];
             if (pdf != null) {
-              $('body').css('height', 'auto');
-              $('body').css('width', '100%');
+              $('body').css('height', 'auto').css('width', 'auto');
               var opt = {
                 margin:       0,
                 filename:     '{{- page.title | slugify -}}.pdf',
