--- a/_layouts/slidedeck.html
+++ b/_layouts/slidedeck.html
@@ -27,8 +27,12 @@
 
 		<div class="reveal">
 			<div class="slides">
+			{% assign class = '' %}
+			{% if slide.background_image %}
+			  {% assign class = class | append: 'full-background-slide' %}
+			{% endif %}
       {% for slide in page.slides %}
-        <section data-background-color="{{ slide.background_color }}" data-background-image="{{ slide.background_image}}" class="content editable">{{ slide.content_markdown | markdownify }}</section>
+        <section class="{{ class }}" data-background-color="{{ slide.background_color }}" data-background-image="{{ slide.background_image }}" class="content editable">{{ slide.content_markdown | markdownify }}</section>
       {% endfor %}
 			</div>
 		</div>
@@ -36,8 +40,10 @@
 		<script src="{{ site.baseurl }}/assets/js/revealjs/dist/reveal.js"></script>
 		<script src="{{ site.baseurl }}/assets/js/revealjs/plugin/highlight/highlight.js"></script>
 		<script src="{{ site.baseurl }}/assets/js/revealjs/plugin/zoom/zoom.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js" integrity="sha512-pdCVFUWsxl1A4g0uV6fyJ3nrnTGeWnZN2Tl/56j45UvZ1OMdm9CIbctuIHj+yBIRTUUyv6I9+OivXj4i0LPEYA==" crossorigin="anonymous"></script>		
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js" integrity="sha512-pdCVFUWsxl1A4g0uV6fyJ3nrnTGeWnZN2Tl/56j45UvZ1OMdm9CIbctuIHj+yBIRTUUyv6I9+OivXj4i0LPEYA==" crossorigin="anonymous"></script>		
+
 		<script>
+		  /* Get URL vars to use to generate print-pdf */
       function getUrlVars() {
         var vars = {};
         var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
@@ -50,7 +56,6 @@
 
       function toggleFullscreen(elem) {
         elem = elem || document.documentElement;
-      
         if (!document.fullscreenElement && !document.mozFullScreenElement &&
           !document.webkitFullscreenElement && !document.msFullscreenElement) {
           if (elem.requestFullscreen) {
@@ -96,7 +101,6 @@
             toggleFullscreen();
             });
 
-            // Handler for .ready() called.
             var pdf = getUrlVars()["generatePDF"];
             if (pdf != null) {
               $('body').css('height', 'auto');
@@ -114,15 +118,9 @@
           
     			}
   			);        
-        
-     
-        
-
       });
-			
-
-
 		</script>
+		
 	  <div class="slidedeck-branding">
 	    <a href="{{ site.baseurl }}/"><img alt="logo" title="Logo" src="{{site.data.images.logo_image}}" /></a> 
 	    <span class="helper-controls"><i title="Overview [O] [ESC]" class="fa fa-th fa-fw overview"></i>  <i class="fa fa-expand fa-fw fullscreen" title="Fullscreen [F]"></i></span>
