--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -5,6 +5,15 @@
 section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
   color: #fff; }
 
+section.full-background-slide h1,
+section.full-background-slide h2,
+section.full-background-slide h3,
+section.full-background-slide h4,
+section.full-background-slide h5,
+section.full-background-slide h6,
+section.full-background-slide p {
+  background-color: rgba(255,255,255,.5);
+}
 
 .slidedeck-branding {
   position:absolute;
