Updated 'assets/css/components/slidedeck.css' via CloudCannon

--- a/assets/css/components/slidedeck.css
+++ b/assets/css/components/slidedeck.css
@@ -12,7 +12,11 @@ section.full-background-slide h4,
 section.full-background-slide h5,
 section.full-background-slide h6,
 section.full-background-slide p {
-  background-color: rgba(255,255,255,.5);
+  background-color: rgba(0,0,0,.5);
+  color:#FFFFFF;
+}
+section.full-background-slide a {
+  color:#FF0000;
 }
 
 .slidedeck-branding {
